Optimiza JettraStoreEngine y ejecuta benchmark